# dbt-pybridge

./: .gitignore  README.md  pyproject.toml
.github/workflows/: release.yml
dbt/adapters/pybridge/: __init__.py  connections.py  impl.py
dbt_pybridge/: __init__.py  dataframe_io.py  dbt_project.yml  runner.py  session.py
dbt_pybridge/macros/materializations/: python_incremental.sql  python_table.sql  python_view.sql
dbt_pybridge/macros/python_model/: python.sql
docs/: scaling_python_models.md
examples/mvp_project/: dbt_project.yml
examples/mvp_project/models/: customer_features.py  customers_kmeans.py  daily_revenue_incremental.py  final.sql  orders_anomaly_isoforest.py  orders_chunked_incremental.py  orders_polars.py  orders_with_jsonb.py  products_similarity_tfidf.py  stg_orders.sql
examples/mvp_project/seeds/: orders.csv
models/silver/: python_silver_wares.py
tests/: test_copy_serialization.py  test_dataframe_io.py  test_incremental_config.py  test_runner_relation_frame.py  test_runner_view.py  test_session_loading.py
