[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dbt-pybridge"
version = "0.2.1"
description = "Run dbt Python models locally and materialize results back to Postgres"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "dbt-core>=1.10,<1.12",
  "dbt-postgres>=1.10,<1.12",
  "pandas>=2.0",
  "polars>=1.0",
  "psycopg2-binary>=2.9",
]

[project.optional-dependencies]
examples = [
  "scikit-learn>=1.4,<2",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["dbt*", "dbt_pybridge*"]
namespaces = true

[tool.setuptools.package-data]
dbt_pybridge = ["dbt_project.yml", "macros/**/*.sql"]
"dbt.adapters.pybridge" = ["*.py"]

[tool.pytest.ini_options]
testpaths = ["tests"]
